kuber-homeworks/1.5/svc-backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
spec:
  selector:
    app: backend
  ports:
    - name: backend
      protocol: TCP
      port: 1180
